# discordbot

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  main.py  mypy.ini  pyproject.toml  requirements.txt
discordbot/: __init__.py  __main__.py  bot.py
discordbot/audio/: __init__.py  priority_queue.py  runner.py  track.py  track_queue.py
discordbot/audio/links/: service.py
discordbot/audio/spotify/: service.py  track.py
discordbot/audio/text_to_speech/: service.py
discordbot/audio/youtube/: __init__.py  service.py  track.py
discordbot/cogs/: __init__.py  config.py  debugging.py  func.py  music.py  text_to_speech.py  utils.py  wikipedia.py
discordbot/common/: __init__.py  config.py  config_store.py  context.py  ffmpeg.py  utils.py
discordbot/music_utils/: __init__.py  spotify.py  twitch.py  youtube.py  ytdl.py
discordbot/utils/: __init__.py  config.py  config_store.py  queue.py
pkg/: __ init __.py  bot.py  music.py  queue.py  text_to_speech.py
pkg/cogs/: __ init __.py  config.py  func.py  music.py  text_to_speech.py  wikipedia.py
pkg/music_utils/: __ init __.py  spotify.py  youtube.py  ytdl.py
pkg/utils/: __ init __.py  config.py  queue.py
scripts/: format.sh  lint.sh  mypy.sh
