[tool.poetry]
name = "discordbot"
version = "1.0.0"
description = "A simple discord bot for different things"
authors = ["ron96G"]

[tool.poetry.dependencies]
python = "^3.8.0"
boto3 = "^1.24.89"
"discord.py" = {extras = ["voice"], version = "^2.0.1"}
google-api-python-client = "^2.64.0"
spotipy = "^2.20.0"
wikipedia = "^1.4.0"
streamlink = "^5.0.1"
twitchAPI = "^2.5.7"
coloredlogs = "^15.0.1"
yt-dlp = "^2023.1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"